# now-playing

./: bun.lockb  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/winrt/: convert.rs  error.rs  media.rs  mod.rs  model.rs
src/components/: AudioProgressBar.tsx  MiniMode.tsx  NormalMode.tsx  OverflowingText.tsx
src/types/: winrt.ts
src/utils/: debug.ts
