[package]
name = "now-playing"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "now_playing_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58.0", features = ["Media_Control", "Storage_Streams", "Foundation_Collections"] }
image = "0.25.2"
win-gsmtc = { version = "0.1.0", features = ["serde"] }
tauri-plugin-process = "2.0.0-rc.0"
